# ACG-Localizer

./: .directory  .gitignore  .history-sattler  CMakeLists.txt  Dockerfile  README.txt
cmake/: .directory  FindANN.cmake  FindFLANN.cmake  FindGMM.cmake  FindLAPACK.cmake  FindOpenMesh.cmake
flann_modification/: kmeans_index.h
src/: .directory  Bundle2Info.cc  CMakeLists.txt  RANSAC.cc  RANSAC.hh  acg_localizer.cc  acg_localizer_active_search.cc  acg_localizer_knn.cc  compute_desc_assignments.cc  timer.cc  timer.hh
src/OpenMesh_vec/: CMakeLists.txt  README
src/OpenMesh_vec/LICENSE/: LICENSEHEADER
src/OpenMesh_vec/OpenMesh/Core/Geometry/: VectorT.hh  VectorT_inc.hh
src/OpenMesh_vec/OpenMesh/Core/System/: compiler.hh  config.h
src/exif_reader/: .directory  exif_reader.cc  exif_reader.hh
src/exif_reader/jhead-2.90/: .directory  changes_ACG_localizer.txt  exif.cc  gpsinfo.cc  iptc.cc  jhead.cc  jpgfile.cc  makernote.cc  myglob.c_  paths.cc
src/features/: SIFT_keypoint.hh  SIFT_loader.cc  SIFT_loader.hh  visual_words_handler.cc  visual_words_handler.hh
src/math/: math.cc  math.hh  matrix3x3.cc  matrix3x3.hh  matrix4x4.cc  matrix4x4.hh  matrixbase.cc  matrixbase.hh  projmatrix.cc  projmatrix.hh  pseudorandomnrgen.cc  pseudorandomnrgen.hh
src/math/SFMT_src/: SFMT-params.hh  SFMT.cc
src/sfm/: bundler_camera.cc  bundler_camera.hh  parse_bundler.cc  parse_bundler.hh
src/solver/: solverbase.cc  solverbase.hh  solverproj.cc  solverproj.hh
